2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	Fix mkhtmlindex rules to not use $< so they work with non-GNU makes.

2005-12-10  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	* configure.ac:
	Add support for building imake config utilities.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	Add makeg script & man page.

2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* Makefile.am:
	Substitute variables in man pages
	Set CPP_PROGRAM to path to cpp

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-10-16  Donnie Berkholz  <spyderous@gentoo.org>

	* Makefile.am:
	Bug #4725 <https://bugs.freedesktop.org/show_bug.cgi?id=4725>
	Detect cf files in the correct location and mirror the monolithic
	install.